2010-08-19  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 30 (related to #23) - ItemAuditor is back to counting items in the mailbox, but will subtract items purchased from the AH or COD mail from its item counts.
- Added a menu to allow the user to see what is to be crafted, only what you hae mats for, or view everything so you can see why something isn't to be crafted.

2010-08-14  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 29 - Changed the Insufficient COD alert to use a case-insensitive comparison on character names.

2010-08-12  Asa Ayers  <Asa.Ayers@Gmail.com>

- API: added IAapi.GetItemCost

2010-08-11  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed an issue where trading an item and gold in exchange for a different item was not considering the gold in the price of the new item.
- Fixed a bug where postage was being counted more than once if you send mail and then open mail in the same session.
- Added a warning when sending items with value to characters on other accounts.
- Added '/ia snatch'. This new command works with your queue (/ia crafting) to replace your snatch list with the materials you need for crafting. NOTE: Auctioneer requires visiting the AH before you can modify the snatch list.
- Fixed Enchanting. I was not getting the ItemID correctly, so enchants could not be mapped to the scrolls they were to created
- Changed snatch to only add each item once and to only add a snatch for items you don't have
- API: Added haveMaterials to the item and need to the reagents that get passed to queue destinations. This is in preparation for building a shopping list module.
- API: Added a way for other addons to register with ItemAuditor once it loads if they were loaded first and updated the example at the end of Api.lua.

2010-08-10  Asa Ayers  <Asa.Ayers@Gmail.com>

- Changed the ArkInventory rule to consider items with no competition to be profitable.
- Ticket 27 - Added the ability to select your preferred auction adodn if multiple are available.